test/data/resolver/valid/optional_node_whole_entity.cypher
OPTIONAL MATCH (p:Person) RETURN p
