test/data/resolver/invalid/with_clause.cypher
MATCH (p:Person) WITH p RETURN p
